[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Brandon Corfman", email = "bcorfman@fastmail.fm"},
]
dependencies = [
    "arcade>=2.6.13",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.1.2",
    "pysnooper>=1.1.1",
    "ipython>=8.3.0",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
